--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
 <body>
 
 <div class="container" id="paySection">
-  <h2 id="welcomeTitle"></h2>
-  <p id="payText"></p>
-  <p id="instructionText"></p>
+  <h2 id="welcomeTitle">Benvenuto!</h2>
+  <p id="payText">Per iniziare, invia un piccolo contributo:</p>
   <a href="https://paypal.me/sidhumosewala599/2" target="_blank">
-    <button id="payBtn"></button>
+    <button id="payBtn">Paga con PayPal</button>
   </a>
-  <br>
-  <button onclick="checkPayment()" id="confirmBtn"></button>
+  <br><br>
+  <button onclick="checkPayment()" id="confirmBtn">Ho già pagato</button>
 </div>
 
 <div class="container hidden" id="chatSection">
@@ -76,58 +75,63 @@
 </div>
 
 <script>
+  // Lingua automatica
   const lang = navigator.language.startsWith("en") ? "en" : "it";
-
-  const texts = {
+  const strings = {
     it: {
-      welcomeTitle: "Benvenuto!",
-      payText: "Per iniziare a chattare con la tua ragazza virtuale, effettua un pagamento di 2€.",
-      instructionText: "Appena completato, torna qui e premi 'Ho pagato'.",
-      payBtn: "Paga ora con PayPal",
-      confirmBtn: "Ho pagato",
-      chatTitle: "Chat con",
-      firstMessage: "Ciao amore... sono qui solo per te.",
-      userPlaceholder: "Scrivi qualcosa...",
-      sendBtn: "Invia",
-      botReply: "Sei così dolce... raccontami di più."
+      title: "Chat Romantica",
+      welcome: "Benvenuto!",
+      pay: "Per iniziare, invia un piccolo contributo:",
+      payBtn: "Paga con PayPal",
+      confirm: "Ho già pagato",
+      input: "Scrivi qualcosa...",
+      send: "Invia",
+      msg: "Ciao amore... sono qui solo per te.",
+      nameList: ["Sofia", "Valentina", "Isabella", "Aurora", "Luna", "Juliette", "Mia", "Aria", "Freya", "Amira"]
     },
     en: {
-      welcomeTitle: "Welcome!",
-      payText: "To start chatting with your virtual girlfriend, please make a €2 payment.",
-      instructionText: "After payment, return here and press 'I have paid'.",
-      payBtn: "Pay now with PayPal",
-      confirmBtn: "I have paid",
-      chatTitle: "Chat with",
-      firstMessage: "Hi love... I’m here just for you.",
-      userPlaceholder: "Type something...",
-      sendBtn: "Send",
-      botReply: "You're so sweet... tell me more."
+      title: "Romantic Chat",
+      welcome: "Welcome!",
+      pay: "To begin, please make a small contribution:",
+      payBtn: "Pay with PayPal",
+      confirm: "I already paid",
+      input: "Write something...",
+      send: "Send",
+      msg: "Hi love... I'm here just for you.",
+      nameList: ["Sophia", "Valentina", "Isabella", "Aurora", "Luna", "Juliette", "Mia", "Aria", "Freya", "Amira"]
     }
   };
 
-  const t = texts[lang];
+  const txt = strings[lang];
+  document.title = txt.title;
+  document.getElementById("welcomeTitle").textContent = txt.welcome;
+  document.getElementById("payText").textContent = txt.pay;
+  document.getElementById("payBtn").textContent = txt.payBtn;
+  document.getElementById("confirmBtn").textContent = txt.confirm;
+  document.getElementById("userInput").placeholder = txt.input;
+  document.getElementById("sendBtn").textContent = txt.send;
+  document.getElementById("firstMessage").textContent = txt.msg;
 
-  document.getElementById("welcomeTitle").textContent = t.welcomeTitle;
-  document.getElementById("payText").textContent = t.payText;
-  document.getElementById("instructionText").textContent = t.instructionText;
-  document.getElementById("payBtn").textContent = t.payBtn;
-  document.getElementById("confirmBtn").textContent = t.confirmBtn;
-  document.getElementById("userInput").placeholder = t.userPlaceholder;
-  document.getElementById("sendBtn").textContent = t.sendBtn;
+  function getRandomName() {
+    const names = txt.nameList;
+    return names[Math.floor(Math.random() * names.length)];
+  }
 
-  const names = ["Sofia", "Valentina", "Isabella", "Aurora", "Luna", "Juliette", "Mia", "Aria", "Freya", "Amira"];
-  const girlName = names[Math.floor(Math.random() * names.length)];
+  document.getElementById("namePlaceholder").textContent = getRandomName();
 
-  document.getElementById("girlName").textContent = `${t.chatTitle} ${girlName}`;
-  document.getElementById("namePlaceholder").textContent = girlName;
-  document.getElementById("firstMessage").textContent = t.firstMessage;
-
-  window.onload = function () {
-    if (localStorage.getItem("hasPaid") === "true") {
-      showChat();
+  // Simulazione invio messaggio
+  function sendMessage() {
+    const input = document.getElementById("userInput");
+    const text = input.value.trim();
+    if (text !== "") {
+      const div = document.createElement("div");
+      div.innerHTML = `<strong>Tu:</strong> ${text}`;
+      document.getElementById("chatWindow").appendChild(div);
+      input.value = "";
     }
-  };
+  }
 
+  // Salvataggio e verifica pagamento
   function checkPayment() {
     localStorage.setItem("hasPaid", "true");
     showChat();
@@ -138,25 +142,10 @@
     document.getElementById("chatSection").classList.remove("hidden");
   }
 
-  function sendMessage() {
-    const input = document.getElementById("userInput");
-    const message = input.value.trim();
-    if (message === "") return;
-
-    const chatWindow = document.getElementById("chatWindow");
-
-    const userMsg = document.createElement("div");
-    userMsg.innerHTML = `<strong>You:</strong> ${message}`;
-    chatWindow.appendChild(userMsg);
-
-    const reply = document.createElement("div");
-    reply.innerHTML = `<strong>${girlName}:</strong> ${t.botReply}`;
-    chatWindow.appendChild(reply);
-
-    input.value = "";
-    chatWindow.scrollTop = chatWindow.scrollHeight;
+  // Mostra chat se già pagato
+  if (localStorage.getItem("hasPaid") === "true") {
+    showChat();
   }
 </script>
-
 </body>
 </html>
